# music_video_from_weather

./: README.md  main.py  main2.py  main3.py  main4.py  main7.py  merge_station_data.py  merge_station_data_1.ipynb  merge_video_audio.py  midi_to_audio_test.py  pyproject.toml  requirements.txt  teleport-.pkg
assets/audio/: audio_2025-02-17_00-00_2025-02-17_05-00_180.mid  audio_2025-02-17_00-00_2025-02-17_10-00_180.mid  audio_2025-02-17_00-00_2025-02-17_11-00_180.mid  audio_2025-02-17_00-00_2025-02-17_12-00_180.mid  audio_2025-02-17_00-00_2025-02-17_15-00_180.mid  audio_2025-02-17_00-00_2025-02-17_16-00_180.mid  audio_2025-02-17_01-00_2025-02-17_06-00_180.mid  audio_2025-02-17_03-00_2025-02-17_08-00_180.mid  output_2025-02-18_2025-02-19_180.midi  output_2025-02-18_2025-02-19_90.midi  output_2025-03-01_09-30_2025-03-02_09-10_420.mid  output_2025-03-30_00-00_2025-03-30_16-20_420.mid
environment/: environment.yaml
functions/: download_new.py  make_midi.py  make_midi_2.py  make_midi_3.py  make_midi_4.py  make_midi_5.py  make_midi_6.py  make_midi_7.py  merge_video_audio.py  merge_weather_data.py  midi_to_wav.py  midi_to_wav_prettymidi.py  video_funcs.py  video_funcs_1.py  video_funcs_2.py
old code/: download.py  main2.py  main3.py  main4.py  main5_live.py  main6_live.py  merge_station_data now.py  merge_station_data.py  merge_station_data_1.ipynb  scan_forlongest_series.py
src/functions/: download.py  download_new.py  make_midi.py  merge.py  soni_functions.py  (+2 more)
weatherdata/: produkt_zehn_min_ff_20230831_20250302_07341.txt  produkt_zehn_now_tu_20250219_20250219_07431.txt
(+30 files in other folders)
