[project]
name = "weather-webcam-sonification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.4",
    "importlib>=1.0.4",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "requests>=2.32.3",
    "numpy>=2.0.2",
    "pretty-midi>=0.2.10",
    "ipython>=8.18.1",
    "ffmpeg>=1.4",
    "setuptools>=78.1.0",
    "scipy>=1.15.2",
]
